examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__expressions__attribute_references.snap
---
source: examples/ast-python/src/tests/corpus/expressions.rs
expression: "get_ast(& db, file)"
---
ParsedAst {
    nodes: [
        Module {
            children: [
                AstNodeId {
                    id: 1,
                    _marker: PhantomData<ast_python::generated::CompoundStatement_SimpleStatement>,
                },
            ],
            _range: Range {
                start_byte: 1,
                end_byte: 7,
                start_point: Point {
                    row: 1,
                    column: 0,
                },
                end_point: Point {
                    row: 2,
                    column: 0,
                },
            },
            _id: 0,
            _parent: None,
            _is_missing: false,
        },
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        AstNodeId {
                            id: 2,
                            _marker: PhantomData<ast_python::generated::Assignment_AugmentedAssignment_Expression_Yield>,
                        },
                    ],
                    _range: Range {
                        start_byte: 1,
                        end_byte: 6,
                        start_point: Point {
                            row: 1,
                            column: 0,
                        },
                        end_point: Point {
                            row: 1,
                            column: 5,
                        },
                    },
                    _id: 1,
                    _parent: Some(
                        0,
                    ),
                    _is_missing: false,
                },
            ),
        ),
        Expression(
            PrimaryExpression(
                Attribute(
                    Attribute {
                        attribute: AstNodeId {
                            id: 6,
                            _marker: PhantomData<ast_python::generated::Identifier>,
                        },
                        object: AstNodeId {
                            id: 3,
                            _marker: PhantomData<ast_python::generated::PrimaryExpression>,
                        },
                        _range: Range {
                            start_byte: 1,
                            end_byte: 6,
                            start_point: Point {
                                row: 1,
                                column: 0,
                            },
                            end_point: Point {
                                row: 1,
                                column: 5,
                            },
                        },
                        _id: 2,
                        _parent: Some(
                            1,
                        ),
                        _is_missing: false,
                    },
                ),
            ),
        ),
        Attribute(
            Attribute {
                attribute: AstNodeId {
                    id: 5,
                    _marker: PhantomData<ast_python::generated::Identifier>,
                },
                object: AstNodeId {
                    id: 4,
                    _marker: PhantomData<ast_python::generated::PrimaryExpression>,
                },
                _range: Range {
                    start_byte: 1,
                    end_byte: 4,
                    start_point: Point {
                        row: 1,
                        column: 0,
                    },
                    end_point: Point {
                        row: 1,
                        column: 3,
                    },
                },
                _id: 3,
                _parent: Some(
                    2,
                ),
                _is_missing: false,
            },
        ),
        Identifier(
            Identifier {
                _range: Range {
                    start_byte: 1,
                    end_byte: 2,
                    start_point: Point {
                        row: 1,
                        column: 0,
                    },
                    end_point: Point {
                        row: 1,
                        column: 1,
                    },
                },
                _id: 4,
                _parent: Some(
                    3,
                ),
                _is_missing: false,
            },
        ),
        Identifier {
            _range: Range {
                start_byte: 3,
                end_byte: 4,
                start_point: Point {
                    row: 1,
                    column: 2,
                },
                end_point: Point {
                    row: 1,
                    column: 3,
                },
            },
            _id: 5,
            _parent: Some(
                3,
            ),
            _is_missing: false,
        },
        Identifier {
            _range: Range {
                start_byte: 5,
                end_byte: 6,
                start_point: Point {
                    row: 1,
                    column: 4,
                },
                end_point: Point {
                    row: 1,
                    column: 5,
                },
            },
            _id: 6,
            _parent: Some(
                2,
            ),
            _is_missing: false,
        },
    ],
}
