examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__expressions__augmented_assignments@a += 1.snap
---
source: src/tests/corpus/expressions.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        AugmentedAssignment(
                            AugmentedAssignment {
                                operator: Token_PlusEqual(
                                    Token_PlusEqual {
                                        [RANGE]
                                    },
                                ),
                                left: Pattern(
                                    Identifier(
                                        Identifier {
                                            [RANGE]
                                        },
                                    ),
                                ),
                                right: Expression(
                                    PrimaryExpression(
                                        Integer(
                                            Integer {
                                                [RANGE]
                                            },
                                        ),
                                    ),
                                ),
                                [RANGE]
                            },
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
