examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__expressions__await_expressions.snap
---
source: src/tests/corpus/expressions.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            PrimaryExpression(
                                Await(
                                    Await {
                                        children: Call(
                                            Call {
                                                function: Identifier(
                                                    Identifier {
                                                        [RANGE]
                                                    },
                                                ),
                                                arguments: ArgumentList(
                                                    ArgumentList {
                                                        children: [
                                                            Expression(
                                                                PrimaryExpression(
                                                                    Identifier(
                                                                        Identifier {
                                                                            [RANGE]
                                                                        },
                                                                    ),
                                                                ),
                                                            ),
                                                            Expression(
                                                                PrimaryExpression(
                                                                    Integer(
                                                                        Integer {
                                                                            [RANGE]
                                                                        },
                                                                    ),
                                                                ),
                                                            ),
                                                        ],
                                                        [RANGE]
                                                    },
                                                ),
                                                [RANGE]
                                            },
                                        ),
                                        [RANGE]
                                    },
                                ),
                            ),
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
        SimpleStatement(
            ReturnStatement(
                ReturnStatement {
                    children: Some(
                        Expression(
                            PrimaryExpression(
                                Await(
                                    Await {
                                        children: Call(
                                            Call {
                                                function: Identifier(
                                                    Identifier {
                                                        [RANGE]
                                                    },
                                                ),
                                                arguments: ArgumentList(
                                                    ArgumentList {
                                                        children: [
                                                            Expression(
                                                                PrimaryExpression(
                                                                    Identifier(
                                                                        Identifier {
                                                                            [RANGE]
                                                                        },
                                                                    ),
                                                                ),
                                                            ),
                                                            Expression(
                                                                PrimaryExpression(
                                                                    Integer(
                                                                        Integer {
                                                                            [RANGE]
                                                                        },
                                                                    ),
                                                                ),
                                                            ),
                                                        ],
                                                        [RANGE]
                                                    },
                                                ),
                                                [RANGE]
                                            },
                                        ),
                                        [RANGE]
                                    },
                                ),
                            ),
                        ),
                    ),
                    [RANGE]
                },
            ),
        ),
        CompoundStatement(
            FunctionDefinition(
                FunctionDefinition {
                    body: Block {
                        alternative: [],
                        children: [
                            SimpleStatement(
                                ReturnStatement(
                                    ReturnStatement {
                                        children: Some(
                                            Expression(
                                                ComparisonOperator(
                                                    ComparisonOperator {
                                                        operators: [
                                                            Token_In(
                                                                Token_In {
                                                                    [RANGE]
                                                                },
                                                            ),
                                                        ],
                                                        children: [
                                                            Identifier(
                                                                Identifier {
                                                                    [RANGE]
                                                                },
                                                            ),
                                                            Await(
                                                                Await {
                                                                    children: Call(
                                                                        Call {
                                                                            function: Identifier(
                                                                                Identifier {
                                                                                    [RANGE]
                                                                                },
                                                                            ),
                                                                            arguments: ArgumentList(
                                                                                ArgumentList {
                                                                                    children: [],
                                                                                    [RANGE]
                                                                                },
                                                                            ),
                                                                            [RANGE]
                                                                        },
                                                                    ),
                                                                    [RANGE]
                                                                },
                                                            ),
                                                        ],
                                                        [RANGE]
                                                    },
                                                ),
                                            ),
                                        ),
                                        [RANGE]
                                    },
                                ),
                            ),
                        ],
                        [RANGE]
                    },
                    parameters: Parameters {
                        children: [
                            TypedParameter(
                                TypedParameter {
                                    Type: Type {
                                        children: Expression(
                                            PrimaryExpression(
                                                Identifier(
                                                    Identifier {
                                                        [RANGE]
                                                    },
                                                ),
                                            ),
                                        ),
                                        [RANGE]
                                    },
                                    children: Identifier(
                                        Identifier {
                                            [RANGE]
                                        },
                                    ),
                                    [RANGE]
                                },
                            ),
                        ],
                        [RANGE]
                    },
                    return_type: Some(
                        Type {
                            children: Expression(
                                PrimaryExpression(
                                    Identifier(
                                        Identifier {
                                            [RANGE]
                                        },
                                    ),
                                ),
                            ),
                            [RANGE]
                        },
                    ),
                    type_parameters: None,
                    name: Identifier {
                        [RANGE]
                    },
                    [RANGE]
                },
            ),
        ),
        SimpleStatement(
            AssertStatement(
                AssertStatement {
                    children: [
                        ComparisonOperator(
                            ComparisonOperator {
                                operators: [
                                    Token_EqualEqual(
                                        Token_EqualEqual {
                                            [RANGE]
                                        },
                                    ),
                                ],
                                children: [
                                    Await(
                                        Await {
                                            children: Call(
                                                Call {
                                                    function: Identifier(
                                                        Identifier {
                                                            [RANGE]
                                                        },
                                                    ),
                                                    arguments: ArgumentList(
                                                        ArgumentList {
                                                            children: [
                                                                Expression(
                                                                    PrimaryExpression(
                                                                        Identifier(
                                                                            Identifier {
                                                                                [RANGE]
                                                                            },
                                                                        ),
                                                                    ),
                                                                ),
                                                            ],
                                                            [RANGE]
                                                        },
                                                    ),
                                                    [RANGE]
                                                },
                                            ),
                                            [RANGE]
                                        },
                                    ),
                                    Identifier(
                                        Identifier {
                                            [RANGE]
                                        },
                                    ),
                                ],
                                [RANGE]
                            },
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
